Prodwork/testwork/atefarea/deploy/deployqa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  annotations:
 #   deployment.kubernetes.io/revision: "1"
  #  meta.helm.sh/release-name: nginx-qa
   # meta.helm.sh/release-namespace: nginx-ingress
  labels:
    app.kubernetes.io/instance: nginx-qa
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-qa-nginx-ingress
    helm.sh/chart: nginx-ingress-0.9.3
  name: nginx-qa-nginx-ingress
  namespace: nginx-ingress
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-qa-nginx-ingress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-qa-nginx-ingress
    spec:
      containers:
      - args:
        - -nginx-plus=false
        - -nginx-reload-timeout=0
        - -enable-app-protect=false
        - -nginx-configmaps=$(POD_NAMESPACE)/nginx-qa-nginx-ingress
        - -default-server-tls-secret=$(POD_NAMESPACE)/nginx-qa-nginx-ingress-default-server-tls
        - -ingress-class=nginx-qa
        - -health-status=false
        - -health-status-uri=/nginx-health
        - -nginx-debug=false
        - -v=1
        - -nginx-status=true
        - -nginx-status-port=8080
        - -nginx-status-allow-cidrs=127.0.0.1
        - -report-ingress-status
        - -external-service=nginx-qa-nginx-ingress
        - -enable-leader-election=true
        - -leader-election-lock-name=nginx-qa-nginx-ingress-leader-election
        - -enable-prometheus-metrics=true
        - -prometheus-metrics-listen-port=9113
        - -enable-custom-resources=true
        - -enable-tls-passthrough=false
        - -enable-snippets=false
        - -enable-preview-policies=false
        - -ready-status=true
        - -ready-status-port=8081
        - -enable-latency-metrics=false
        image: nginx/nginx-ingress:1.11.3
        imagePullPolicy: IfNotPresent
        name: nginx-qa-nginx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9113
          name: prometheus
          protocol: TCP
        - containerPort: 8081
          name: readiness-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx-ready
            port: readiness-port
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: nginx-qa-nginx-ingress
      serviceAccountName: nginx-qa-nginx-ingress
      terminationGracePeriodSeconds: 30
